2000-05-26  Akim Demaille  <akim@epita.fr>

	Thanks to --program-transform-name, `autoconf' might be install as
	`yo-man-i-am-the-all-mighty-AVt0c0nF-eh-eh'.  But when
	`yo-man-i-am-the-all-mighty-AVt0h3Ad3R-eh-eh' and the other tools
	want to trace, they might stupidly invoke the program named
	`autoconf' instead.  Pfff, stupid scripts :)

	* Makefile.am (editsh): Transfer the names of the install
	`autoconf' and `autoheader'.
	* autoconf.sh: Add a missing period at the end of the comment
	# Parse command line
	Make sure to have a ChangeLog much longer than the patch.
	* autoheader.sh: Use the right `autoconf'.
	* autoupdate.sh: Likewise.
	* autoreconf.sh: Likewise, and for `autoheader' too.
	Simplify the handling of localdir and AC_MACRODIR.
	* ifnames.sh: Formatting changes.

2000-05-25  Steven G. Johnson <stevenj@alum.mit.edu>

	Don't use f2c as a possible Fortran compiler, since by itself it
	cannot produce object code.

	* aclang.m4 (AC_PROG_F77): Remove f2c from the search list.
	* doc/autoconf.texi: Excise mentions of f2c in AC_PROG_F77 docs.

2000-05-26 Mark Elbrecht <snowball3@bigfoot.com>

	Currently, AC_PROG_LN_S incorrectly reports yes with DJGPP. This
	is because the DJGPP `ln' emulates soft links for executables by
	generating a stub that in turn calls the real program.  This
	feature also works with nonexistent files like in the Unix
	spec. So `ln -s X conftestdata' will generate `conftestdata.exe'
	which will attempt to call 'X.exe'. But this feature only works
	for executables.  Fix it.

	* acspecific.m4 (AC_PROG_LN_S): Create a sample file and use it to
	test `ln -s'.

2000-05-26  Ossama Othman <ossama@ece.uci.edu>

	* aclang.m4 (AC_PROG_CXX): Look for aCC before CC.

2000-05-26  Akim Demaille  <akim@epita.fr>

	* acspecific.m4 (AC_FUNC_STRERROR_R): New, from `strerror_r.m4',
	serial 2, by Jim Meyering.
	(AC_FUNC_LSTAT_FOLLOWS_SLASHED_SYMLINK): New, from
	`lstat-slash.m4', serial 1, by Jim Meyering.
	* acfunctions: Adjust.
