@@ -1,5 +1,13 @@
 2000-05-26  Akim Demaille  <akim@epita.fr>
 
+	* autoreconf.sh (autoconf, autoheader): Be more conscientious when
+	looking for the executable.
+	* autoupdate.sh: Likewise.
+	* autoheader.sh: Likewise.
+	Suggested by Alexandre Oliva.
+
+2000-05-26  Akim Demaille  <akim@epita.fr>
+
 	Thanks to --program-transform-name, `autoconf' might be install as
 	`yo-man-i-am-the-all-mighty-AVt0c0nF-eh-eh'.  But when
 	`yo-man-i-am-the-all-mighty-AVt0h3Ad3R-eh-eh' and the other tools
